src/objects/CH_Events__e.object
<CustomObject>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Value should be either HWS or SWS</description>
        <label>Application Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fucntional_Area__c</fullName>
        <label>Fucntional Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_API_Name__c</fullName>
        <label>sObject API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Id__c</fullName>
        <description>Id of the Salesforce record</description>
        <label>sObject Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CH Events</label>
    <pluralLabel>CH Events</pluralLabel>
</CustomObject>